2016-07-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCopt.c,
	  support/regression/tests/muldiv.c:
	  Preparations for unsigned 16x16->32 multiplication.

2016-07-23 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s:
	  Fix issue in loop counter in stm8 memcpy().
	* src/port.h,
	  src/SDCCsymt.c,
	  src/*/main.c:
	  Introduce backend option for 16x16->32 multiplication.
	* support/regression/tests/muldiv.c:
	  Prepare test for unsigned 16x16->32 multiplication.

2016-07-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strchr.c,
	* device/lib/_strrchr.c,
	* device/lib/_strstr.c: reverted commit 9631, these files should not
	  generate warning 196
	* sdas/asstm8/stm8mch.c: fixed incw cycle count

2016-07-22 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/memcpy.s,
	  support/regression/tests/memory.c:
	  Fix an issue in stm8 unrolled memcpy().
	* device/lib/stm8/__mulsint2slong.s:
	  Optimize multiplication routine for small operands.
	* src/SDCCopt.c:
	  Optimize multiplication with anded operands.

2016-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/Makefile.in,
	  device/lib/stm8/__mulsint2slong.s,
	  src/SDCCcse.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/muldiv.c,
	  Support for separate 16x16->32 multiplication routine, RFE #507.

2016-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Narrow arithmetic operations when results are cast to narrower type: RFE #506.

2016-07-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/astlcs90/t90mch.c
	  Fix a potential defect.

2016-07-20 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/Makefile.in,
	  device/lib/stm8/strcpy.s:
	  Partially unrolled, slightly faster strcpy() for stm8.
	* src/stm8/gen.c,
	  src/SDCCsymt.c:
	  More efficient handling of boolean values.
	* device/lib/r2k/Makefile.in:
	  Fix bug #2526.
	* src/stm8/main.c: